--- a/config/locales/app.pt-BR.yml
+++ b/config/locales/app.pt-BR.yml
@@ -11,3 +11,5 @@ pt-BR:
     <<: *models_and_attributes
   activemodel:
     <<: *models_and_attributes
+  page:
+    title: Espalhando os avisos dos seus arredores!
