chore(theme): Apply theme
Apply basic layout, header and footer.

Also:

- Add favicon file
- Add brand logo css

--- a/config/locales/app.pt-BR.yml
+++ b/config/locales/app.pt-BR.yml
@@ -12,4 +12,5 @@ pt-BR:
   activemodel:
     <<: *models_and_attributes
   page:
-    title: Espalhando os avisos dos seus arredores!
+    title: Espalhando os avisos dos seus arredores
+    footer: Feito com ♥ por
