--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,4 +21,5 @@
 
 en:
   page:
-    title: Spreading warnings of your surroundings!
+    title: Spreading warnings of your surroundings
+    footer: Made with ♥ by
