feature(auth): Add user authentication
Add authentication via Auth0. More: http://auth0.com

Also, add auth0's gems, configuration, controller, coffee, helper and specs.

--- a/config/locales/app.pt-BR.yml
+++ b/config/locales/app.pt-BR.yml
@@ -16,6 +16,8 @@ pt-BR:
     <<: *models_and_attributes
   activemodel:
     <<: *models_and_attributes
+  errors: &errors
+    forbidden: Ops! Não autorizado..
   page:
     title: Espalhando os avisos dos seus arredores
     footer: Feito com ♥ por
