--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -16,6 +16,8 @@ en:
     <<: *models_and_attributes
   activemodel:
     <<: *models_and_attributes  
+  errors: &errors
+    forbidden: Ops! Not allowed..
   page:
     title: Spreading warnings of your surroundings
     footer: Made with ♥ by
