feature(user): Profile complete verification
After the authentication, the system verifies if the user's profile
is completed. If not, the user is redirected to the edit page
in order to complete their profile.

--- a/config/locales/app.pt-BR.yml
+++ b/config/locales/app.pt-BR.yml
@@ -21,6 +21,12 @@ pt-BR:
   page:
     title: Espalhando os avisos dos seus arredores
     footer: Feito com ♥ por
+  helpers:
+    submit:
+      update_simple: Atualizar
+      finish: Finalizar
   pages:
     account: Conta
     profile: Profile
+  account:
+    profile_info_missing: Já está quase pronto. Por favor, atualize suas informações.
