feature(search): Add user search
Enable authenticated users to search for other users.

closes #18

--- a/config/locales/app.pt-BR.yml
+++ b/config/locales/app.pt-BR.yml
@@ -30,3 +30,4 @@ pt-BR:
     profile: Profile
   account:
     profile_info_missing: Já está quase pronto. Por favor, atualize suas informações.
+  search: Busca
