--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4,6 +4,9 @@ en:
       user:
         one: User
         other: Users
+      post:
+        one: Post
+        other: Posts
     attributes:
       user:
         provider: Provider
@@ -12,6 +15,17 @@ en:
         name: Name
         email: Email
         bio: Bio
+      post:
+        kind: Type
+        description: Description
+        description_question: What's happening?
+        location: Location
+        location_question: Where?
+        author: Author
+        kinds:
+          accident: Accident
+          fire: Fire
+          robbery: Robbery
   activerecord:
     <<: *models_and_attributes
   activemodel:
@@ -21,13 +35,17 @@ en:
   page:
     title: Spreading warnings of your surroundings
     footer: Made with ♥ by
+  alerts:
+    are_you_sure: Are you sure?
   helpers:
     submit:
       update_simple: Update
       finish: Finish
+      send: Send
   pages:
     account: Account
     profile: Profile
+    timeline: Timeline
   account:
     profile_info_missing: It's almost done. Please, update your data.
   search: Search
