--- a/config/locales/app.pt-BR.yml
+++ b/config/locales/app.pt-BR.yml
@@ -15,6 +15,8 @@ pt-BR:
         name: Nome
         email: Email
         bio: Bio
+        followers: Seguidores
+        followings: Seguindo
       post:
         kind: Tipo
         description: Descrição
@@ -37,6 +39,9 @@ pt-BR:
     footer: Feito com ♥ por
   alerts:
     are_you_sure: Tem certeza?
+    followings:
+      start: Começou a seguir %{user}!
+      stop: Parou de seguir %{user}!
   helpers:
     submit:
       update_simple: Atualizar
