--- a/config/locales/app.pt-BR.yml
+++ b/config/locales/app.pt-BR.yml
@@ -54,3 +54,4 @@ pt-BR:
   account:
     profile_info_missing: Já está quase pronto. Por favor, atualize suas informações.
   search: Busca
+  all: Todos
